Make sure map embed is snug with no scrollbars

--- a/invenio_previewer/assets/bootstrap3/scss/invenio_previewer/geojson.scss
+++ b/invenio_previewer/assets/bootstrap3/scss/invenio_previewer/geojson.scss
@@ -1,6 +1,6 @@
 /*
  * This file is part of Invenio.
- * Copyright (C) 2015-2018 CERN.
+ * Copyright (C) 2015-2020 CERN.
  *
  * Invenio is free software; you can redistribute it and/or modify it
  * under the terms of the MIT License; see LICENSE file for more details.
@@ -8,7 +8,16 @@
 
 @import "leaflet/dist/leaflet.css";
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  height: 100%;
+}
+
 #map {
     width: 100%;
-    height: 480px;
+    height: 400px;
 }
